- Updated bibliography.bib

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -204,3 +204,21 @@
   biburl    = {https://dblp.org/rec/journals/corr/abs-1809-11130.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/corr/RidgewaySRZM15,
+  author    = {Karl Ridgeway and
+               Jake Snell and
+               Brett Roads and
+               Richard S. Zemel and
+               Michael C. Mozer},
+  title     = {Learning to generate images with perceptual similarity metrics},
+  journal   = {CoRR},
+  volume    = {abs/1511.06409},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1511.06409},
+  archivePrefix = {arXiv},
+  eprint    = {1511.06409},
+  timestamp = {Mon, 13 Aug 2018 16:48:37 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/RidgewaySRZM15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
