--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -222,3 +222,23 @@
   biburl    = {https://dblp.org/rec/journals/corr/RidgewaySRZM15.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@INPROCEEDINGS{SRneighbporembedding,
+
+  author={ {Hong Chang} and  {Dit-Yan Yeung} and  {Yimin Xiong}},
+
+  booktitle={Proceedings of the 2004 IEEE Computer Society Conference on Computer Vision and Pattern Recognition, 2004. CVPR 2004.}, 
+
+  title={Super-resolution through neighbor embedding}, 
+
+  year={2004},
+  
+  url={https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.330.2972&rep=rep1&type=pdf},
+
+  volume={1},
+
+  number={},
+
+  pages={I-I},
+
+  doi={10.1109/CVPR.2004.1315043}}
