- Updated bibliography. - Stareted writing powerpoint

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -205,7 +205,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/RidgewaySRZM15,
+@article{perceptualssim,
   author    = {Karl Ridgeway and
                Jake Snell and
                Brett Roads and
@@ -242,3 +242,54 @@
   pages={I-I},
 
   doi={10.1109/CVPR.2004.1315043}}
+
+@article{srcnn,
+  author    = {Chao Dong and
+               Chen Change Loy and
+               Kaiming He and
+               Xiaoou Tang},
+  title     = {Image Super-Resolution Using Deep Convolutional Networks},
+  journal   = {CoRR},
+  volume    = {abs/1501.00092},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1501.00092},
+  archivePrefix = {arXiv},
+  eprint    = {1501.00092},
+  timestamp = {Mon, 13 Aug 2018 16:46:08 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/DongLHT15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{SRsurvey,
+  author    = {Saeed Anwar and
+               Salman Khan and
+               Nick Barnes},
+  title     = {A Deep Journey into Super-resolution: {A} survey},
+  journal   = {CoRR},
+  volume    = {abs/1904.07523},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1904.07523},
+  archivePrefix = {arXiv},
+  eprint    = {1904.07523},
+  timestamp = {Fri, 26 Apr 2019 13:18:53 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1904-07523.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{RED,
+  author    = {Yulun Zhang and
+               Yapeng Tian and
+               Yu Kong and
+               Bineng Zhong and
+               Yun Fu},
+  title     = {Residual Dense Network for Image Restoration},
+  journal   = {CoRR},
+  volume    = {abs/1812.10477},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1812.10477},
+  archivePrefix = {arXiv},
+  eprint    = {1812.10477},
+  timestamp = {Wed, 02 Jan 2019 14:40:18 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1812-10477.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
