--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -187,7 +187,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{spatialattentionmechanism9,
+@article{CSFM,
   author    = {Yanting Hu and
                Jie Li and
                Yuanfei Huang and
@@ -291,5 +291,24 @@
   eprint    = {1812.10477},
   timestamp = {Wed, 02 Jan 2019 14:40:18 +0100},
   biburl    = {https://dblp.org/rec/journals/corr/abs-1812-10477.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ParametrizedImageOperator,
+  author    = {Qingnan Fan and
+               Dongdong Chen and
+               Lu Yuan and
+               Gang Hua and
+               Nenghai Yu and
+               Baoquan Chen},
+  title     = {Decouple Learning for Parameterized Image Operators},
+  journal   = {CoRR},
+  volume    = {abs/1807.08186},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1807.08186},
+  archivePrefix = {arXiv},
+  eprint    = {1807.08186},
+  timestamp = {Thu, 09 Jan 2020 08:28:26 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1807-08186.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
