--- a/report/powerpoint/powerpoint.tex
+++ b/report/powerpoint/powerpoint.tex
@@ -321,10 +321,14 @@
 
 \begin{frame}{ASDN}{Model analysis}
     \begin{figure}
-        \centering
-        \includegraphics[height=0.5\textheight,keepaspectratio]{asdn-psnr-n_params.png}
-        \vspace*{100px}
-        \includegraphics[height=0.5\textheight,keepaspectratio]{asdn-ablation-study.png}
+        \begin{subfigure}{\textwidth}
+            \centering
+            \includegraphics[height=0.5\textheight,keepaspectratio]{asdn-psnr-n_params.png}                
+        \end{subfigure}
+        \begin{subfigure}{\textwidth}
+            \centering
+            \includegraphics[scale=0.2]{asdn-ablation-study.png}
+        \end{subfigure}
     \end{figure}
 \end{frame}
 
