report::lapsrn and mslapsrn

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -98,7 +98,7 @@
   doi={10.1109/CVPR.2017.298},
   url={https://openaccess.thecvf.com/content_cvpr_2017/papers/Tai_Image_Super-Resolution_via_CVPR_2017_paper.pdf}}
 
-  @article{DBLP:journals/corr/HeZR016,
+  @article{resnetidentity,
   author    = {Kaiming He and
                Xiangyu Zhang and
                Shaoqing Ren and
